--- a/css/styles.css
+++ b/css/styles.css
@@ -11,21 +11,16 @@ h2 {
 
 p {
   font-family: "Comic Sans Ms";
-  font-weight: normal;
-
+  font-weight: bold;
+  font-size: 20;
 }
 
-ul {
-  line-height: 20px;
-}
 body{
-  background: #e5ded1 url(images/Background.jpg);
+  background-image: url("https://ak1.picdn.net/shutterstock/videos/16571551/thumb/1.jpg?i10c=img.resize(height:160)");
   display: block;
   margin-top: inherit;
 
 }
 img{
-  display: block;
-  margin: auto;
   width: 40%;
 }
