Change background colour

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ p {
 }
 
 body{
-  background-image: url("https://ak1.picdn.net/shutterstock/videos/16571551/thumb/1.jpg?i10c=img.resize(height:160)");
+  background-image: url("https://i.pinimg.com/originals/06/7c/a7/067ca731338b6dbe22df67a28fcbdd32.jpg");
   display: block;
   margin-top: inherit;
   background-repeat: no-repeat;
@@ -25,5 +25,5 @@ body{
 
 }
 img{
-  width: 40%;
+  width: 20%;
 }
