--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
 h1 {
   color: black;
   text-align: center;
+  font-family: sans-serif;
+  font-size: 40px;
 }
 
 h2 {
@@ -26,4 +28,5 @@ body{
 }
 img{
   width: 20%;
+  position: relative;
 }
