--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ p {
   font-family: "Comic Sans Ms";
   font-weight: bold;
   font-size: 35;
+  float: right;
 }
 
 body{
@@ -21,28 +22,16 @@ body{
 }
 
 img{
-  width: 30%;
+  width: 50%;
+  float: left;
 }
+
 header{
   list-style-type: none;
   background-color: none;
-  width: 70%;
-
+  width: 100%;
 }
 
-header ul li a{
-  font-weight: bolder;
-  font-family: sans-serif;
-  color: #2A3024;
-  display: inline-block;
-}
-
-header ul li {
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.columns {
-  width: 350px;
-  float: left;
+header ul{
+  float: right;
 }
