--- a/css/room.css
+++ b/css/room.css
@@ -13,7 +13,7 @@ p {
 }
 
 body{
-  background-image: url("https://i.pinimg.com/originals/06/7c/a7/067ca731338b6dbe22df67a28fcbdd32.jpg");
+  background-image: url("http://www.africauncovered.com/media/assets/67/a772f7af642ea81a76de24c1cf32b3b80b876d.jpg");
   display: block;
   background-repeat: no-repeat;
   background-size: cover;
