--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5888,6 +5888,7 @@ a.list-group-item.active:focus .list-group-item-text {
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  float: right;
 }
 
 .well blockquote {
