--- a/css/room.css
+++ b/css/room.css
@@ -10,6 +10,7 @@ p {
   font-weight: bold;
   font-size: 35;
   float: left;
+  color: black;
 }
 
 body{
@@ -17,7 +18,7 @@ body{
   display: block;
   background-repeat: no-repeat;
   background-size: cover;
-  color: white;
+
 }
 
 img{
