--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  color: white;
+  color: black;
   text-align: center;
   font-family: sans-serif;
   font-size: 50px;
@@ -9,7 +9,7 @@ p {
   font-family: "Comic Sans Ms";
   font-weight: bold;
   font-size: 35;
-  color: white;
+  color: black;
 }
 
 body{
@@ -33,7 +33,7 @@ header{
 ul li a {
   font-weight: 1000;
   font-family: sans-serif;
-  color: white;
+  color: black;
   display: inline-block;
   font-size: 30px;
   text-decoration: none;
@@ -43,9 +43,4 @@ ul li {
   display: inline-block;
   margin-right: 100px;
 
-}
-
-.columns {
-  width: 350px;
-  float: left;
 }
